--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node models/admin/createAdmin.js && nodemon server.js",
+    "dev": "nodemon server.js",
     "init:admin": "node models/admin/createAdmin.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
